--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=smallECommerce
+
+spring.datasource.url=${URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA and Hibernate properties
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
